--- a/pagina.html
+++ b/pagina.html
@@ -6,6 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--Carlos: Crea Titulo -->
+    <div>
+
+    </div>
+    <!--Maria Mira: Crea una lista de tres elementos -->
+    <div>
+
+    </div>
+    <!--Ivan: Crea una tabla 2x2 -->
+    <div>
+
+    </div>
+    <!--Adrian: Crea dos parrafos-->
+    <div>
+
+    </div>
+    <!--Alejandro: Crea dos enlaces-->
+    <div>
+
+    </div>
+    <!--Rodrigo: Crea una lista de dos elementos-->
+    <div>
+
+    </div>
+    <!--Javier: Crea una imagen-->
+    <div>
+
+    </div>
+    <!--Jesus: Crea un parrafo-->
+    <div>
+
+    </div>
+
+
 </body>
 </html>
