--- a/pagina.html
+++ b/pagina.html
@@ -31,6 +31,10 @@
 
     </div>
     <!--Rodrigo: Crea una lista de dos elementos-->
+    <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+    </ol>
     <div>
 
     </div>
