--- a/pagina.html
+++ b/pagina.html
@@ -35,6 +35,7 @@
 
     </div>
     <!--Javier: Crea una imagen-->
+    <img src="https://img.freepik.com/vector-premium/imagen-divina-santidad-virgen-maria_18591-2669.jpg" alt="maria">
     <div>
 
     </div>
