--- a/pagina.html
+++ b/pagina.html
@@ -18,9 +18,18 @@
 		<li></li>
 	</ul>
     </div>
-    <!--Ivan: Crea una tabla 2x2 -->
-    <div>
 
+    <div>
+        <table>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+        </table>
     </div>
     <!--Adrian: Crea dos parrafos-->
 
