updated html file

--- a/pagina.html
+++ b/pagina.html
@@ -13,9 +13,9 @@
     <!--Maria Mira: Crea una lista de tres elementos -->
     <div>
 	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>Hola </li>
+		<li>Mundo</li>
+		<li>Cruel</li>
 	</ul>
     </div>
 
